# statgpu

./: .gitattributes  .gitignore  .pypirc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PLAN_UNIFIED.md  README.md  RELEASING.md  TO_DO.md  USAGE.md  USAGE_CN.md  USAGE_EN.md  benchmark_coxph.py  benchmark_ridge_lasso.py  plan.md  pyproject.toml  run_benchmarks.sh  setup.py  validate_coxph.py
.claude/skills/: benchmark.md  code-review.md  new-module-dev.md
.claude/workflows/: new-module-dev.md
.github/: pr79-review-fix-v2-trigger.txt  pr80-final-ci-trigger.txt  pr80-round3.patch  ridge-changelog-trigger
.github/workflows/: agent-one-shot-patch-v2.yml  agent-one-shot-patch.yml  apply-covariance-panel-review.yml  apply-domain-sources.yml  apply-module-review-v2.yml  apply-module-review.yml  apply-post-ridge-audit-docs.yml  apply-remaining-public-review.yml  benchmark-frontend.yml  diagnose-anova-kernel.yml  docs-autofix-pr84.yml  docs-link-diagnostics-pr84.yml  docs-pr84-remove-stale-links.yml  export-benchmark-audit.yml  finalize-june-dashboard.yml  fix-schema-version.yml  pr79-apply-second-review.yml  pr79-doc-consistency.yml  pr79-doc-finalize.yml  pr79-docs-sync.yml  pr79-finalize-validation-docs.yml  pr79-fix-static-annotation.yml  pr79-fstat-fix.yml  pr79-py39-py310-diagnostics.yml  pr79-review-fix-diagnose.yml  pr79-review-fix-once.yml  pr79-review-fix-trigger.yml  pr79-review-fix-v2.yml  pr79-source-export.yml  pr79-third-review-apply.yml  pr79-third-review-snapshot.yml  pr79-welch-compat-fix.yml  pr80-apply-diagnostics.yml  pr80-export-source.yml  pr80-round3.yml  pr80-round4-apply.yml  pr80-round4-export.yml  publish.yml  refresh-benchmark-assets.yml  refresh-domain-frontend.yml  (+9 more)
dev/: .agent-patch-trigger  .agent-patch-trigger-v2  AGENTS.md  README.md  agent_patch.py
dev/archive/: elasticnet_base_impl.py
dev/benchmarks/: .review-fix-assets-refreshed  RESULTS.md  _bench_unsupervised_fast2.py  _bench_unsupervised_full.py  (+85 more)
docs/: README.md  benchmarks.md  changelog.md  cross-validation.md  index.md  technical-debt.md
examples/: benchmark.py  benchmark_all_methods_large_scale.py  benchmark_all_models_gpu.py  benchmark_comparison.py  benchmark_cox_cluster.py  benchmark_cox_fit_timing.py  benchmark_external_frameworks.py  benchmark_full_comparison.py  benchmark_gpu_memory_cleanup.py  benchmark_gpu_optimized.py  benchmark_gpu_warmup.py  benchmark_lasso_cpu_gpu_tol.py  benchmark_lasso_inference_gpu_vs_cpu.py  benchmark_multitarget_sklearn_r.py  compare_all_with_r.py  compare_full_stats.py  compare_lasso_kkt_stopping.py  compare_ridge_implementations.py  compare_with_r.py  compare_with_r_benchmark.R  fix_logistic_and_compare.py  full_summary.py  multitarget_benchmark_utils.py  test_all_five_gpu_final.py  test_all_five_methods.py  test_coxph_simple.py  test_diagnostics.py  test_full_gpu_ridge.py  test_gpu_full_pipeline.py  test_njobs.py  test_stepwise.py
frontend/: QA.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.contract.json  tsconfig.e2e.json  tsconfig.json  vite.config.ts
results/: bench_baseline.json  bench_gpu_cleanup.json  bench_high_dim.json  bench_largeN_largeP.json  bench_large_scale.json  bench_with_inference.json  benchmark_analysis_report_2026-04-07.md  benchmark_complete_summary.md  benchmark_elasticnet_sklearn_2026-04-18.json  benchmark_elasticnet_sklearn_2026-04-18.md  compare_external_2026-06-24.json  compare_external_2026-06-24.md  compare_external_v2_2026-06-24.json  compare_external_v2_2026-06-24.md  distribution_bench_2026-06-21.json  distribution_bench_2026-06-21.md  gam_aligned_2026-06-24.json  glm_solver_benchmark_2026-06-23.md  inference_backend_benchmark_2026-04-05.json  inference_backend_benchmark_2026-04-05_fisher_cauchy_compare.json  inference_backend_benchmark_2026-04-05_fisher_cauchy_compare_bg.json  inference_backend_benchmark_2026-04-05_fisher_cauchy_compare_optimized.json  inference_backend_benchmark_2026-04-05_fisher_cauchy_compare_snippet.json  new_modules_bench_2026-06-24.json  new_modules_bench_2026-06-24.md  new_modules_full_2026-06-24.md  nmf_production_opt_20260507_194500.json  p2_benchmark_final.json  penalized_glm_bench_2026-06-22.json  penalized_glm_bench_2026-06-22.md  penalized_glm_bench_perf_2026-06-22.json  pr74_inference_validation.json  remote_bootstrap_benchmark_2026-04-05.json  remote_bootstrap_benchmark_2026-04-05.md  remote_external_probability_benchmark_2026-04-05.md  remote_fisher_cauchy_benchmark_2026-04-05.json  remote_fisher_cauchy_benchmark_2026-04-05.md  remote_inference_backend_benchmark_2026-04-05.json  remote_inference_backend_benchmark_optimized_vectorized_rerun_2026-04-05.json  remote_inference_backend_benchmark_strict_scalar_rerun_2026-04-05.json  (+54 more)
scripts/: remote_r_bench.R  remote_r_compare.py  shared_cox_10000x20.csv
statgpu/: __init__.py  _base.py  _config.py  _cv_base.py  _gpu_utils.py  _gpu_utils_torch.py
statgpu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cox.py  test_external_consistency.py  test_linear.py  test_logistic.py
(+925 files in other folders)
