[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statgpu"
version = "0.1.0"
description = "GPU-accelerated statistical methods with sklearn-compatible API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["statistics", "gpu", "cuda", "machine-learning", "sklearn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.20",
    "joblib>=1.0",
    "scipy>=1.7",
]

[project.optional-dependencies]
gpu = ["cupy-cuda11x>=9.0"]
torch = ["torch>=1.8"]
dev = ["pytest>=6.0", "black", "flake8", "mypy"]

[project.urls]
Homepage = "https://github.com/yourusername/statgpu"
Repository = "https://github.com/yourusername/statgpu"

[tool.setuptools.packages.find]
where = ["."]
include = ["statgpu*"]
exclude = ["tests*", "examples*"]
