[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statgpu"
version = "0.1.0"
description = "GPU-accelerated statistical methods with sklearn-compatible API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "TheHiddenObserver"}
]
keywords = ["statistics", "gpu", "cuda", "machine-learning", "sklearn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.20",
    "joblib>=1.0",
    "scipy>=1.7",
]

[project.optional-dependencies]
# IMPORTANT:
# CuPy wheels are CUDA-major-version specific.
# Pick ONE of gpu11 / gpu12 extras based on your CUDA runtime.
gpu11 = ["cupy-cuda11x>=13.0"]
gpu12 = ["cupy-cuda12x>=13.0"]
# PyTorch backend (PyTorch 2.0+ recommended for torch.special functions)
torch = ["torch>=2.0", "scipy>=1.7"]
dev = ["pytest>=6.0", "black", "flake8", "mypy"]
validation = ["pytest>=6.0", "scikit-learn>=1.0", "statsmodels>=0.13"]
formula = ["patsy>=0.5.3", "pandas>=1.5"]

[project.urls]
Homepage = "https://github.com/TheHiddenObserver/statgpu"
Repository = "https://github.com/TheHiddenObserver/statgpu"

[tool.setuptools.packages.find]
where = ["."]
include = ["statgpu*"]
exclude = ["tests*", "examples*", "dev*"]

[tool.pytest.ini_options]
testpaths = ["dev/tests"]
