[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=1.20", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statgpu"
version = "0.2.1"
description = "GPU-accelerated statistical methods with sklearn-compatible API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "TheHiddenObserver"}
]
keywords = ["statistics", "gpu", "cuda", "machine-learning", "sklearn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.20",
    "joblib>=1.0",
    "scipy>=1.7",
]

[project.optional-dependencies]
# IMPORTANT:
# CuPy wheels are CUDA-major-version specific.
# Pick ONE of gpu11 / gpu12 extras based on your CUDA runtime.
gpu11 = ["cupy-cuda11x>=13.0"]
gpu12 = ["cupy-cuda12x>=13.0"]
# PyTorch backend (PyTorch 2.0+ recommended for torch.special functions)
torch = ["torch>=2.0", "scipy>=1.7"]
dev = ["pytest>=6.0", "black", "flake8", "mypy", "jsonschema[format]>=4.0"]
validation = ["pytest>=6.0", "scikit-learn>=1.0", "statsmodels>=0.13", "jsonschema[format]>=4.0"]
formula = ["patsy>=0.5.3", "pandas>=1.5"]
cpu_ext = ["Cython>=3.0"]

[project.urls]
Homepage = "https://github.com/TheHiddenObserver/statgpu"
Repository = "https://github.com/TheHiddenObserver/statgpu"

[tool.setuptools.packages.find]
where = ["."]
include = ["statgpu*"]
exclude = ["tests*", "examples*", "dev*"]

[tool.pytest.ini_options]
testpaths = ["dev/tests"]
